<resources>
    <string name="app_name">CShare</string>

    <string-array name="product_categories_array">
        <item>Féculents</item>
        <item>Fruits/Légumes</item>
        <item>Conserves/Plats cuisinés</item>
        <item>Produits laitiers</item>
        <item>Desserts/Pain</item>
        <item>Viandes/Oeufs</item>
        <item>Produits d\'hygiène</item>
        <item>Produits d\'entretien</item>
        <item>Autres</item>
    </string-array>
    <string-array name="campus_array">
        <item>Gif</item>
        <item>Rennes</item>
        <item>Metz</item>
    </string-array>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="select_picture">Select Picture</string>
    <string name="file_uri_missing">Sorry, file uri is missing!</string>
    <string name="product_already_ordered">Someone has already ordered the product</string>
    <string name="deletion_successful">Product successfully deleted</string>
    <string name="unexpected_error">Unexpected error</string>
    <string name="order_successful">Product successfully ordered</string>
    <string name="cancel_successful">Order successfully canceled</string>
    <string name="delivery_successful">Product successfully delivered</string>
    <string name="product_already_delivered">Seems like the product has already been delivered</string>
    <string name="order">Order</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="delievered">Delivered</string>
    <string name="cancel_order">Cancel the order</string>
    <string name="transaction_done">Transaction done, enjoy!</string>
    <string name="addition_successful">Product added successfully</string>
    <string name="expiration_date_required">Expiration date is required</string>
    <string name="select_action">Select Action</string>
    <string name="gallery">Select photo from gallery</string>
    <string name="camera">Capture photo from camera</string>
    <string name="image_choice_failed">Sorry! Failed to choose any image</string>
    <string name="log_out_confirmation">Are you sure you want to log out ?</string>
    <string name="log_out">Log out</string>
    <string name="confirm">Confirm</string>
    <string name="change_password_indications">Enter your old password and a new one</string>
    <string name="change_password">Change Password</string>
    <string name="ok">OK</string>
    <string name="current_password">Enter your current password</string>
    <string name="password_length">Passwords should be at least 6 characters long</string>
    <string name="password_should_match">Passwords should match</string>
    <string name="delete_account_confirm">Are you sure you want to delete your profile? This action is irreversible.</string>
    <string name="password_change_successful">Password changed successfully</string>
    <string name="log_out_successful">Logged out successfully</string>
    <string name="delete_account_successful">Account deleted successfully</string>
    <string name="account_creation_successful">Account successfully created !</string>
    <string name="reset_password_indications">Enter your email to reset your password</string>
    <string name="reset_password">Reset password</string>
    <string name="invalid_email">Invalid email</string>
    <string name="password_reset">Password reset</string>
    <string name="logged_in_successful">Successfully logged in</string>
    <string name="fill_form">Fill in the form to give your product:</string>
    <string name="name">Name</string>
    <string name="choose_category">Choose a category</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="set_expiration_date">Set expiration date</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="you_must_choose_a_profile_picture">You must choose a profile picture</string>
    <string name="submit">Submit</string>
    <string name="create_account">Create Account</string>
    <string name="password_forgotten">Password forgotten?</string>
    <string name="sign_up">Sign up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="room_number">Room number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="old_passsword">Old passsword</string>
    <string name="new_password">New password</string>
    <string name="product">Product</string>
    <string name="category">Category</string>
    <string name="status">Status</string>
    <string name="exp_date">Exp date</string>
    <string name="supplier">Supplier:</string>
    <string name="campus">Campus</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="delete_account">Delete account</string>
    <string name="quantity">Quantity</string>
    <string name="edit_profile">Edit Profile</string>

    <string name="minimal_terms">

&lt;p>These terms and conditions are an agreement between the Mobile Application Developers and you.
        This Agreement sets forth the general terms and conditions of your use of the CShare mobile
        application and any of its products or services.&lt;/p>
&lt;strong>Accounts and membership&lt;/strong>
&lt;p>If you create an account in the Mobile Application, you are responsible for maintaining the
        security of your account and you are fully responsible for all activities that occur under
        the account and any other actions taken in connection with it. We may, but have no
        obligation to, monitor and review new accounts before you may sign in and use our Services.
        Providing false contact information of any kind may result in the termination of your
        account. You must immediately notify us of any unauthorized uses of your account or any
        other breaches of security. We will not be liable for any acts or omissions by you,
        including any damages of any kind incurred as a result of such acts or omissions.
        We may suspend, disable, or delete your account (or any part thereof) if we determine that
        you have violated any provision of this Agreement or that your conduct or content would tend
        to damage our reputation and goodwill. If we delete your account for the foregoing reasons,
        you may not re-register for our Services. We may block your email address and Internet
        protocol address to prevent further registration.&lt;/p>
&lt;strong>User content&lt;/strong>
&lt;p>We do not own any data, information or material that you submit in the Mobile Application in
        the course of using the Service. You shall have sole responsibility for the accuracy,
        quality, integrity, legality, reliability, appropriateness, and intellectual property
        ownership or right to use of all submitted Content. We may monitor and review Content in the
        Mobile Application submitted or created using our Services by you. Unless specifically
        permitted by you, your use of the Mobile Application does not grant us the license to use,
        reproduce, adapt, modify, publish or distribute the Content created by you or stored in your
        user account for commercial, marketing or any similar purpose. But you grant us permission
        to access, copy, distribute, store, transmit, reformat, display and perform the Content of
        your user account solely as required for the purpose of providing the Services to you.
        Without limiting any of those representations or warranties, we have the right, though not
        the obligation, to, in our own sole discretion, refuse or remove any Content that, in our
        reasonable opinion, violates any of our policies or is in any way harmful or objectionable.
        &lt;/p>
&lt;strong>Backups&lt;/strong>
&lt;p>We are not responsible for Content residing in the Mobile Application. In no event shall we be
        held liable for any loss of any Content. It is your sole responsibility to maintain
        appropriate backup of your Content. Notwithstanding the foregoing, on some occasions and in
        certain circumstances, with absolutely no obligation, we may be able to restore some or all
        of your data that has been deleted as of a certain date and time when we may have backed up
        data for our own purposes. We make no guarantee that the data you need will be available.
        &lt;/p>
&lt;strong>Links to other mobile applications&lt;/strong>
&lt;p>Although this Mobile Application may link to other mobile applications, we are not, directly
        or indirectly, implying any approval, association, sponsorship, endorsement, or affiliation
        with any linked mobile application, unless specifically stated herein. We are not
        responsible for examining or evaluating, and we do not warrant the offerings of, any
        businesses or individuals or the content of their mobile applications. We do not assume any
        responsibility or liability for the actions, products, services, and content of any other
        third-parties. You should carefully review the legal statements and other conditions of use
        of any mobile application which you access through a link from this Mobile Application. Your
        linking to any other off-site mobile applications is at your own risk.&lt;/p>
&lt;strong>Changes and amendments&lt;/strong>
&lt;p>We reserve the right to modify this Agreement or its policies relating to the Mobile
        Application or Services at any time, effective upon posting of an updated version of this
        Agreement in the Mobile Application. When we do, we will send you an email to notify you.
        Continued use of the Mobile Application after any such changes shall constitute your consent
        to such changes. Policy was created with WebsitePolicies.&lt;/p>
&lt;strong>Acceptance of these terms&lt;/strong>
&lt;p>You acknowledge that you have read this Agreement and agree to all its terms and conditions.
        By using the Mobile Application or its Services you agree to be bound by this Agreement.
        If you do not agree to abide by the terms of this Agreement, you are not authorized to use
        or access the Mobile Application and its Services.&lt;/p>
&lt;strong>Contacting us&lt;/strong>
&lt;p>If you would like to contact us to understand more about this Agreement or wish to contact us
        concerning any matter relating to it, you may send an email to &lt;em>
        centralesupelecshare@gmail.com&lt;/em>&lt;/p>
&lt;p>This document was last updated on May 17, 2020&lt;/p>

</string>
    <string name="i_accept">I accept</string>
    <string name="i_reject">I reject</string>
    <string name="terms_and_conditions">Terms and conditions</string>
</resources>
