<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.views.auth.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/imageViewProfilePicture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_gravity="center"
                app:civ_border_color="@color/colorPrimary" />

            <ImageView
                android:id="@+id/imageViewGallery"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewProfilePicture"
                app:layout_constraintRight_toRightOf="@+id/imageViewProfilePicture"
                android:src="@drawable/ic_create_black_24dp" />

        <LinearLayout
            android:id="@+id/formLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/imageViewGallery"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewEmail"
                style="@style/textView"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"

                android:layout_height="wrap_content"
                android:text="@string/email" />

            <TextView
                android:id="@+id/textViewFirstName"
                style="@style/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/first_name" />

            <TextView
                android:id="@+id/textViewLastName"
                style="@style/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/last_name" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/room_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextRoomNumber"
                    style="@style/inputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/spinnerCampus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondaryLight"
                android:popupBackground="@color/colorSecondaryLight"
                app:layout_constraintTop_toBottomOf="@id/editTextRoomNumber"
                app:ms_arrowColor="@color/colorPrimary"
                app:ms_baseColor="@color/colorSecondaryDark"
                app:ms_enableFloatingLabel="true"
                app:ms_floatingLabelColor="@color/colorPrimaryText"
                app:ms_hintColor="@color/colorPrimaryText"
                app:ms_multiline="true" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/formLinearLayout">

                <Button
                    android:id="@+id/buttonSave"
                    style="@style/ContainedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/save"
                    app:layout_constraintLeft_toLeftOf="parent" />
            </RelativeLayout>

        </LinearLayout>

        <Button
            android:id="@+id/buttonChangePassword"
            style="@style/OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/change_password"
            app:layout_constraintBottom_toTopOf="@id/buttonLogOut" />


        <Button
            android:id="@+id/buttonLogOut"
            style="@style/OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:textColor="@color/colorError"
            app:rippleColor="@color/colorError"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/buttonDeleteAccount" />

        <Button
            android:id="@+id/buttonDeleteAccount"
            style="@style/ContainedButton"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorError"
            android:text="@string/delete_account"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
